--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,7 +66,7 @@
     </div>
     <div class="copyright">
       <span>
-        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}.
+        All content &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }} and respective copyright holders.
       </span>
     </div>
   </address>
